# home-fleet

./: README.md
embedded/: .gitignore  Cargo.toml  memory.x
embedded/always-on-key/: Cargo.toml  Embed.toml
embedded/always-on-key/src/: config.rs  main.rs
embedded/fleet-esb/: Cargo.toml
embedded/fleet-esb/src/: lib.rs  nonce.rs  prx.rs  ptx.rs
embedded/fleet-keys/: Cargo.toml
embedded/fleet-keys/src/: lib.rs
embedded/fleet-keys/src/keys/: .gitignore  demo.rs  mod.rs
embedded/fleet-uarte/: Cargo.toml
embedded/fleet-uarte/src/: app.rs  buffer.rs  irq.rs  lib.rs
embedded/pc-modem/: Cargo.toml  Embed.toml
embedded/pc-modem/src/: config.rs  main.rs  timer.rs
embedded/plant-light/: Cargo.toml  Embed.toml  debug.gdb
embedded/plant-light/src/: comms.rs  config.rs  main.rs  radio.rs  relays.rs  timer.rs
embedded/test-modem/: Cargo.toml  Embed.toml
embedded/test-modem/src/: main.rs
gateway/fleet-cli/: Cargo.toml
gateway/fleet-cli/src/: main.rs
gateway/fleet-manager/: Cargo.toml  launch.sh  living_room_opts.mvdb.json  living_room_stats.mvdb.json  main_cfg.mvdb.json
gateway/fleet-manager/src/: main.rs
gateway/fleet-manager/src/comms/: mod.rs
gateway/fleet-manager/src/plant/: mod.rs
gateway/fleet-manager/src/rest/: mod.rs
gateway/fleet-remote/: Cargo.toml
gateway/fleet-remote/src/: main.rs
notes/: hw-uarte.md
shared/fleet-icd/: Cargo.toml
shared/fleet-icd/src/: lib.rs  modem.rs  radio.rs  radio2.rs
