[workspace]
members = [
    "plant-light",
    "pc-modem",
    "test-modem",
    "fleet-esb",
    "fleet-keys",
    "fleet-uarte",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
debug-assertions = true

[patch.crates-io]
nrf-hal-common = { git = "https://github.com/jamesmunns/nrf-hal.git", rev = "ppi-impl" }
