[workspace]
members = [
    "always-on-key",
    "plant-light",
    "pc-modem",
    "test-modem",
    "fleet-esb",
    "fleet-keys",
    "fleet-uarte",
    "scratch",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
debug-assertions = true

[patch.crates-io]
# nrf-hal-common = { git = "https://github.com/nrf-rs/nrf-hal.git", rev = "4ce15251a0afd1dbddfbcd6d6e3225a9b2fc262e" }
# esb = { path = "../../esb" }
