[package]
name = "fleet-esb"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}
postcard = "0.5.0"

[dependencies.serde]
version = "1.0"
default-features = false

[dependencies.chacha20poly1305]
version = "0.4.1"
default-features = false
features = ["reduced-round", "heapless"]

[dependencies.esb]
version = "0.0.1"
features = ["fast-ru"]
git = "https://github.com/jamesmunns/esb"
rev = "mut-read"

[features]
51 = ["esb/51", "nrf51-hal"]
52810 = ["esb/52810", "nrf52810-hal"]
52832 = ["esb/52832", "nrf52832-hal"]
52840 = ["esb/52840", "nrf52840-hal"]
default = ["52832"]
