[package]
name = "fleet-uarte"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bbqueue = "0.4.6"
nrf52810-hal = { version = "0.11.0", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.11.0", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.11.0", features = ["rt"], optional = true }
embedded-hal = "0.2.4"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }

[features]
52810 = ["nrf52810-hal"]
52832 = ["nrf52832-hal"]
52840 = ["nrf52840-hal"]
default = ["52832"]
