[package]
name = "pc-modem"
version = "0.0.1"
edition = "2018"
authors = [ "James Munns <james.munns@ferrous-systems.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
cortex-m-rt = "0.6.12"
bbqueue = "0.4.6"
embedded-hal = "0.2.3"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }

nrf52810-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.10", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.10", features = ["rt"], optional = true }
nrf51-hal = {version = "0.10.0", features = ["rt"], optional = true}

[dependencies.esb]
version = "0.0.1"
features = ["fast-ru"]
git = "https://github.com/thalesfragoso/esb"
rev = "separate-types"

[dependencies.panic-persist]
version = "0.2.1"
default-features = false

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "pc-modem"
doc = false
test = false

[features]
51 = ["esb/51", "nrf51-hal"]
52810 = ["esb/52810", "nrf52810-hal"]
52832 = ["esb/52832", "nrf52832-hal"]
52840 = ["esb/52840", "nrf52840-hal"]
default = ["52832"]
