[package]
name = "pc-modem"
version = "0.0.1"
edition = "2018"
authors = [ "James Munns <james.munns@ferrous-systems.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtfm = "0.5.1"
cortex-m-rt = "0.6.12"
bbqueue = "0.4.6"
embedded-hal = "0.2.3"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }
nrf52832-hal = { version = "0.11", features = ["rt"] }
postcard = "0.5.0"

[dependencies.esb]
version = "0.1.0"
features = ["fast-ru", "52832"]

[dependencies.fleet-icd]
version = "0.1.0"
path = "../../shared/fleet-icd"

[dependencies.fleet-esb]
version = "0.1.0"
path = "../fleet-esb"

[dependencies.fleet-uarte]
version = "0.1.0"
path = "../fleet-uarte"

[dependencies.fleet-keys]
version = "0.1.0"
path = "../fleet-keys"
default-features = false
features = ["prod"]

[dependencies.panic-persist]
version = "0.2.1"
default-features = false
features = ["utf8"]

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "pc-modem"
doc = false
test = false

[features]
