[package]
name = "plant-light"
version = "0.0.1"
edition = "2018"
authors = [ "James Munns <james.munns@ferrous-systems.com>"]

[dependencies]
cortex-m = "0.6.2"
cortex-m-rtic = "0.5"
cortex-m-rt = "0.6.12"
bbqueue = "0.4.9"
embedded-hal = "0.2.3"
rtt-target = {version = "0.2.0", features = ["cortex-m"] }

nrf52810-hal = { version = "0.11", features = ["rt"], optional = true }
nrf52832-hal = { version = "0.11", features = ["rt"], optional = true }
nrf52840-hal = { version = "0.11", features = ["rt"], optional = true }
nrf51-hal = {version = "0.11.0", features = ["rt"], optional = true}

blinq = "0.1"

anachro-icd = "0.1"
heapless = "0.5.5"
postcard = "0.5.1"

[dependencies.anachro-client]
# git = "https://github.com/jamesmunns/anachro"
# rev = "b5efb63e1f750d026b7c37400c63b8e612be6d6b"
path = "/home/james/anachro/anachro-client"

[dependencies.esb]
version = "0.1.0"
features = ["fast-ru"]
path = "../../../../personal/esb"

[dependencies.fleet-icd]
version = "0.1.0"
path = "../../shared/fleet-icd"

[dependencies.fleet-esb]
version = "0.1.0"
path = "../fleet-esb"
default-features = false


[dependencies.fleet-keys]
version = "0.1.0"
path = "../fleet-keys"
default-features = false
features = ["prod"]

[dependencies.panic-persist]
version = "0.2.1"
default-features = false
features = ["utf8"]

# Disable documentation to avoid spurious rustdoc warnings
[[bin]]
name = "plant-light"
doc = false
test = false

[features]
51 = ["esb/51", "nrf51-hal"]
52810 = ["esb/52810", "nrf52810-hal", "fleet-esb/52810"]
52832 = ["esb/52832", "nrf52832-hal", "fleet-esb/52832"]
52840 = ["esb/52840", "nrf52840-hal", "fleet-esb/52840"]
default = ["52840"]
