[package]
name = "fleet-manager"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvdb = "0.3.0"
postcard = "0.5.0"
chrono = { version = "0.4.11", features = ["serde"] }
serialport = "3.3.0"
serde = { version = "1.0.114", features = ["derive"] }
topq = { version = "0.1.0", path = "../../../topq" }

[dependencies.fleet-icd]
path = "../../shared/fleet-icd"
