[package]
name = "fleet-manager"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mvdb = "0.3.0"
postcard = { version = "0.5.0", features = ["use-std"] }
chrono = { version = "0.4.11", features = ["serde"] }
serialport = "3.3.0"
serde = { version = "1.0.114", features = ["derive"] }
topq = { version = "0.2.0" }
rocket = "0.4.5"

[dependencies.anachro-client]
path = "/home/james/anachro/anachro-client"

[dependencies.anachro-icd]
path = "/home/james/anachro/anachro-icd"

[dependencies.fleet-icd]
path = "../../shared/fleet-icd"
