[package]
name = "fleet-icd"
version = "0.1.0"
authors = ["James Munns <james.munns@ferrous-systems.com>"]
edition = "2018"

[dependencies]
generic-array = "0.14.2"
postcard = "0.5.0"
anachro-icd = "0.1"

[dependencies.anachro-client]
# git = "https://github.com/jamesmunns/anachro"
# rev = "b5efb63e1f750d026b7c37400c63b8e612be6d6b"
path = "/home/james/anachro/anachro-client"

[dependencies.serde]
version = "1.0.111"
default-features = false
features = ["derive"]
